# lip6-cluster-setup

./: HPC.md  LICENSE  README.md  conv-manager  convergence.md  hpc-notebook  lip6-cluster-setup  pyproject.toml
lip6tui/: __init__.py  config.py  duration.py  ssh.py  validators.py
lip6tui/conv/: __init__.py  app.py  app.tcss  commands.py
lip6tui/hpc/: __init__.py  app.py  app.tcss  commands.py
lip6tui/widgets/: __init__.py  cluster_status.py  header.py  job_table.py  launch_form.py  status_panel.py
tests/: test_conv_slurm_options.sh  test_duration_parsing.sh  test_no_login_hooks.sh  test_template_sync.sh  test_terminal_chrome.sh
